@@ -86,8 +86,8 @@ class AccountingCorePresentationViewServiceTest {
     void testAllReconiciliationTransaction_successfulUnReconciled() {
         when(accountingCoreTransactionRepository.findCalcReconciliationStatistic()).thenReturn(new Object[]{0L, 1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L});
         when(transactionReconcilationRepository.findTopByOrderByCreatedAtDesc()).thenReturn(Optional.empty());
-        when(accountingCoreTransactionRepository.findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), anyInt(), anyInt())).thenReturn(List.of());
-        when(accountingCoreTransactionRepository.findAllReconciliationSpecialCount(any(),any(),any(),any())).thenReturn(Collections.singletonList(new Object[]{0L}));
+        when(accountingCoreTransactionRepository.findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), eq(Optional.empty()), eq(Optional.empty()), anyInt(), anyInt())).thenReturn(List.of());
+        when(accountingCoreTransactionRepository.findAllReconciliationSpecialCount(any(),any(), any(), any(), any(),any())).thenReturn(Collections.singletonList(new Object[]{0L}));
 
         ReconciliationFilterRequest body = mock(ReconciliationFilterRequest.class);
         when(body.getFilter()).thenReturn(ReconciliationFilterStatusRequest.UNRECONCILED);
@@ -96,7 +96,7 @@ class AccountingCorePresentationViewServiceTest {
 
         verify(accountingCoreTransactionRepository).findCalcReconciliationStatistic();
         verify(transactionReconcilationRepository).findTopByOrderByCreatedAtDesc();
-        verify(accountingCoreTransactionRepository).findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), anyInt(), anyInt());
+        verify(accountingCoreTransactionRepository).findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), eq(Optional.empty()), eq(Optional.empty()), anyInt(), anyInt());
         verifyNoMoreInteractions(accountingCoreTransactionRepository, transactionReconcilationRepository);
         verifyNoInteractions(accountingCoreService, transactionBatchRepositoryGateway, transactionRepositoryGateway);
     }
